--- a/docs/amplify-theme/_sass/components/_sections-list.scss
+++ b/docs/amplify-theme/_sass/components/_sections-list.scss
@@ -118,7 +118,7 @@
 
 			a {
 				@include link-reset;
-				font-size:0.9rem;
+				//font-size:0.9rem;
 				padding-left: 10px;
 				white-space: nowrap;
 				overflow: hidden;
