--- a/docs/amplify-theme/_layouts/examples.html
+++ b/docs/amplify-theme/_layouts/examples.html
@@ -26,11 +26,6 @@
 				{% endif %}
 
 				<div class="row">
-					<div class="col-md-8 section-top docs-container">
-						<div class="content">
-							{{ content }}
-						</div><!-- /.content -->
-					</div><!-- /.col -->
 					<div class="col-md-4 col-md-offset-1 dev-guide-container">
 						<div class="version-section">
 							<p>Version</p>
@@ -41,8 +36,8 @@
 							</div>
 						</div>
 						<div class="sections-list-wrapper">
-							<div class="sections-list js-affix js-scrollspy hidden-xs">
-								<div class="dev-guide"> 
+							<div class="sections-list js-affix js-scrollspy">
+								<div class="dev-guide">
 									{% if site.examples %}
 										<div class="left-nav-section">
 											<p class="gray-section-head">Examples</p>
@@ -60,6 +55,11 @@
 								</div>						
 							</div><!-- /.sections-list -->
 						</div>
+					</div><!-- /.col -->
+					<div class="col-md-8 section-top docs-container">
+						<div class="content">
+							{{ content }}
+						</div><!-- /.content -->
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.container -->
