--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -1717,7 +1717,7 @@ li {
                 }
         
                 select {
-                    background: url("/images/icons/Minis/Arrows.svg") no-repeat;
+                    //background: url("/images/icons/Minis/Arrows.svg") no-repeat;
                     background-position: 164px 3px;
                     //filter: brightness(0) invert(1);
                     border: 0 !important;                 /*Removes border*/
