--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -38,13 +38,11 @@
 									{% if site.styleguide %}
 										<div class="left-nav-section">
 											<div class="feature-list">
+                                                <ul class="nav">
 												{% for item in site.styleguide %}
-													{% if page.url contains item.url %}
-														<div class='in-this-page js-sections'></div>
-													{% else %}
-														<a href="{{ item.url }}" class="style-category">{{ item.title }}</a>
-													{% endif %}	
-												{% endfor %}
+														<li><a href="{{ item.url }}" class="js-smooth-scroll style-category">{{ item.title }}</a></li>
+                                                {% endfor %}
+                                                </ul>   
 											</div>
 										</div>
 									{% endif %}
