--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -31,8 +31,8 @@
                                     <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
                                     <a href="cli_home">
                                         <div id="learn-more-about-cli-box">
-                                            <p id="learn-more-about-cli">Learn more about the CLI</p>
-                                            <img id="down-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
+                                            <p class="learn-more-link">Learn more about the CLI</p>
+                                            <img class="down-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
                                         </div>
                                     </a>
 								</div>
